--- a/desafiourbana-ui - Copia/src/app/listagem-programacao/listagem-programacao.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-programacao/listagem-programacao.component.html
@@ -18,7 +18,7 @@
                 <label>Título</label>
             </div>
             <div class="ui-g-12 ui-md-9 ui-fluid">
-                <input pInputText type="text" name="local" class="campo" [(ngModel)]="local">
+                <input pInputText type="text" name="local" class="campo" [(ngModel)]="titulo">
             </div>
         </div> 
 
@@ -27,7 +27,7 @@
               <label for="tiposMidias">Tipo de Programação</label>
           </div>
           <div class="ui-g-12 ui-md-9 ui-fluid">
-              <p-dropdown [options]="null" name="tipo" placeholder="Selecione" [(ngModel)]="tipo" ></p-dropdown>
+              <p-dropdown [options]="tiposProgramacao" name="tipo" placeholder="Selecione" [(ngModel)]="programacao" ></p-dropdown>
           </div>
       </div>
 
@@ -45,23 +45,21 @@
         
 </form>
 
-<p-dataTable [value]="tvs" [paginator]="true" [rows]="3" [responsive]="true"
+<p-dataTable [value]="programacoes" [paginator]="true" [rows]="3" [responsive]="true"
     emptyMessage="Nenhuma programação encontrada" #tabela>
         
         <p-column field="titulo" header="Título"></p-column>
-        <p-column field="tipo" header="Tipo"></p-column>
+        <p-column field="tipoProgramacao" header="Tipo"></p-column>
         <p-column field="duracao" header="Duração"></p-column>
         
         <p-column styleClass="acoes" header="Editar">
-            <ng-template let-tv="rowData" pTemplate="body">
-                <a pButton icon="fa-pencil" class="ui-button-success" label="editar" [routerLink]="['/tvs', tv.id]"></a>
-                <!-- <button pButton icon="fa-trash" class="ui-button-success" type="button" label="excluir" (click)="confirmarExclusao(tv)"></button> -->
+            <ng-template let-prog="rowData" pTemplate="body">
+                <a pButton icon="fa-pencil" class="ui-button-success" label="editar" [routerLink]="['/programacao', prog.id]"></a>
             </ng-template>
         </p-column>
         <p-column styleClass="acoes" header="Excluir">
-          <ng-template let-tv="rowData" pTemplate="body">
-              <!-- <a pButton icon="fa-pencil" class="ui-button-success" label="editar" [routerLink]="['/tvs', tv.id]"></a> -->
-              <button pButton icon="fa-trash" class="ui-button-success" type="button" label="excluir" (click)="confirmarExclusao(tv)"></button>
+          <ng-template let-prog="rowData" pTemplate="body">
+            <button pButton icon="fa-trash" class="ui-button-success" type="button" label="excluir" (click)="confirmarExclusao(prog)"></button>
           </ng-template>
       </p-column>
       
