--- a/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
+++ b/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
@@ -1,3 +1,137 @@
-<p>
-  programacao works!
-</p>
+<div class="container">
+
+  <div style="text-align:center">
+    <h1 style="color: green;">
+      {{ editandoProgramacao ? 'EDITAR ' : 'NOVA'}} PROGRAMAÇÃO
+    </h1>
+  </div>
+  <div style="margin: 30px; float: right;">
+    <button pButton type="button" label="Buscar mídias" class="ui-button-success" (click)="showDialog()"></button>
+</div>
+
+  <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
+
+    <div style="margin: 2%;">
+      <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+          <label>Título</label>
+      </div>
+      <div class="ui-g-12 ui-md-9 ui-fluid">
+          <input pInputText type="text" name="titulo" class="campo" [(ngModel)]="programacao.titulo">
+      </div>
+  </div>
+
+  <div class="p-formgroup-inline" style="margin-left: 2%; margin-top: 2%; margin-bottom: 2%;">
+    <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+        <label for="tiposMidias">Tipo de Programação</label>
+    </div>
+    <div class="ui-g-12 ui-md-9 ui-fluid">
+        <p-dropdown [options]="tiposProgramacao" name="tipo" placeholder="Selecione" [(ngModel)]="programacao.tipoProgramacao" ></p-dropdown>
+    </div>
+  </div>
+
+  <div style="margin: 2%;">
+    <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+        <label>Horário de Início</label>
+    </div>
+    <div class="ui-g-12 ui-md-9 ui-fluid">
+      <input pInputText type="text" name="inicio" class="campo" [(ngModel)]="programacao.horarioInicio">
+    </div> 
+</div> 
+
+ <div style="margin: 2%;">
+    <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+        <label>Horário de Encerramento</label>
+    </div>
+    <div class="ui-g-12 ui-md-9 ui-fluid">
+      <input pInputText type="text" name="fim" class="campo" [(ngModel)]="programacao.horarioFim">
+    </div> 
+</div> 
+
+<div style="margin: 2%;">
+    <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+        <label>Dia da semana</label>
+    </div>
+    <div class="ui-g-12 ui-md-9 ui-fluid">
+      <input pInputText type="text" name="diaSemana" class="campo" [(ngModel)]="programacao.diaSemana">
+    </div> 
+</div> 
+
+<!-- <div style="margin: 2%;">
+    <div class="ui-g-12 ui-md-9 ui-fluid" style="color: green;">
+        <label>Duração</label>
+    </div>
+    <div class="ui-g-12 ui-md-9 ui-fluid">
+      <input pInputText type="text" name="duracao" class="campo" [(ngModel)]="programacao.duracao">
+    </div> 
+</div>  -->
+
+  <div style="display: inline-block; margin-right: 60%; margin-left: 3%; margin-bottom: 2%;">
+    <div style="display: inline-block;">
+        <button class="btn-salvar" pButton type="submit" class="ui-button-success" label="Salvar" ></button>
+    </div>
+    <div style="display: inline-block;">
+        <button class="ui-button-secondary" routerLink="/programacao" pButton label="Cancelar"></button>
+    </div>
+  </div>
+
+<p-dataTable [value]="prog" [paginator]="true" [rows]="3" [responsive]="true"
+    emptyMessage="Nenhuma mídia adicionada à programação" #tabela>
+        
+        <p-column field="titulo" header="Nome"></p-column>
+        <p-column field="tipo" header="Tipo"></p-column>
+        <p-column field="duracao" header="Duração"></p-column>
+        
+        <p-column styleClass="acoes" header="Editar">
+            <ng-template let-tv="rowData" pTemplate="body">
+              <a pButton icon="fa-pencil" class="ui-button-success" label="editar" [routerLink]="['/programacao', prog.id]"></a>
+            </ng-template>
+        </p-column>
+        <p-column styleClass="acoes" header="Excluir">
+          <ng-template let-tv="rowData" pTemplate="body">
+            <button pButton icon="fa-trash" class="ui-button-success" type="button" label="excluir" (click)="confirmarExclusao(tv)"></button>
+          </ng-template>
+      </p-column>
+      
+</p-dataTable>    
+  
+
+    <p-dialog header="Adicionar Mídia" [(visible)]="display">
+
+      <p-dataList [value]="midias" [paginator]="true" [rows]="5">
+        <p-header>
+            List de Mídias
+        </p-header>
+        <ng-template let-mid pTemplate="item">
+            <div class="ui-g ui-fluid car-item">
+                <!-- <div class="ui-g-12 ui-md-3" style="text-align:center">
+                    <img src="assets/showcase/images/demo/car/{{car.brand}}.png">
+                </div> -->
+                <div class="ui-g-12 ui-md-9 car-details">
+                    <div class="ui-g">
+                        <div class="ui-g-2 ui-sm-6">Título: </div>
+                        <div class="ui-g-10 ui-sm-6">{{mid.titulo}}</div>
+                        
+                        <div class="ui-g-2 ui-sm-6">Chave: </div>
+                        <div class="ui-g-10 ui-sm-6">{{mid.chaveEspecifica}}</div>
+                        
+                        <div class="ui-g-2 ui-sm-6">Link: </div>
+                        <div class="ui-g-10 ui-sm-6">{{mid.link}}</div>
+                        
+                        <div class="ui-g-2 ui-sm-6">Disponibilidade: </div>
+                        <div class="ui-g-10 ui-sm-6">{{mid.disponibilidade}}</div>
+
+                        <div class="ui-g-2 ui-sm-6">Adicionar: </div>
+                        <div class="ui-g-10 ui-sm-6">
+                          <button pButton class="ui-button-success" type="button" label="adicionar" (click)="adicionarMidia(mid)"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </ng-template>
+    </p-dataList>
+    
+       
+    </p-dialog>
+
+    </form>
+</div>
