--- a/desafiourbana-ui - Copia/src/app/listagem-midia/listagem-midia.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-midia/listagem-midia.component.html
@@ -72,28 +72,69 @@
             </p-column>
 
         </p-dataTable>
-        
-</div>
+           
+    </div>
+    
+    <p-dialog header="Adicionar Arquivo" [(visible)]="display">
+        <!-- <p-fileUpload name="file" [url]="urlAnexo" 
+            chooseLabel="Anexar" uploadLabel="Enviar" cancelLabel="Cancelar"
+            (onUpload)="onUpload($event)">
+        </p-fileUpload>
+    
+        <ng-template pTemplate="content">
+            <div class="col-md-12">
+                <ul *ngIf="file != null">
+                    <li>
+                        <a href=""> {{ file.name }} </a>
+                    </li>
+                </ul>
+            </div>
+        </ng-template> -->
 
-<p-dialog header="Adicionar Arquivo" [(visible)]="display">
-    <p-fileUpload name="file" url="urlAnexo" multiple="multiple"
-        chooseLabel="Anexar" uploadLabel="Enviar" cancelLabel="Cancelar"
-        (onUpload)="onUpload($event)" accept="image/*" maxFileSize="1000000"
-        >
-        <!-- (onError)="documentoInvalido($event.files[0])"  -->
-        <!-- (onBeforeSend)="bloquearClique()" -->
-    </p-fileUpload>
-
-    <ng-template pTemplate="content">
-        <div class="col-md-12">
-            <ul *ngIf="file != null">
-                <li>
-                    <a href=""> {{ file.name }} </a>
-                </li>
-            </ul>
+        <div class="container row">
+            <div class="col-md-12">
+                <h1>Upload Image</h1>
+            </div>
         </div>
-    </ng-template>
-</p-dialog>
+            
+        <div class="container row">
+            <div class="col-md-6">
+                <input type="file" (change)="onFileChanged($event)">
+            </div>
+        
+            <div class="col-md-6">
+                <input type="button" (click)="onUpload()" value="file">
+            </div>
+        </div>
+            
+        <hr />
+            
+        <div class="container row">
+            <div class="col-md-12">
+                <div *ngIf=message>{{message}}</div>
+            </div>
+        </div>
+            
+        <div class="container row">
+            <div class="col-md-6">
+                <input type="text" class="form-control" id="name" placeholder="image name" [(ngModel)]="imageName"
+                    name="name" />
+            </div>
+            <div class="col-md-6">
+                <input type="button" (click)="getImage()" value="Get Image">
+            </div>
+        </div>
+            
+        <div class="container row">
+            <div class="col-md-12">
+                <div *ngIf=retrievedImage>
+                    <img [src]="retrievedImage">
+                </div>
+            </div>
+        </div>
+            
+    </p-dialog>
+
 
     <!-- </div> -->
 
