--- a/desafiourbana-ui - Copia/src/app/tv/tv.component.html
+++ b/desafiourbana-ui - Copia/src/app/tv/tv.component.html
@@ -32,7 +32,8 @@
                     <label for="perfis">Marca</label>
                 </div>
                 <div class="ui-g-12 ui-md-9 ui-fluid">
-                    <p-dropdown [options]="marcas" name="marca" placeholder="Selecione" [(ngModel)]="tv.marca" ></p-dropdown>
+                    <p-dropdown [options]="marcas" name="marca" placeholder="Selecione"
+                    [style]="{width: '30%', minWidth: '30%'}" [(ngModel)]="tv.marca" ></p-dropdown>
                 </div>
             </div>
 
