--- a/desafiourbana-ui - Copia/src/app/listagem-usuario/listagem-usuario.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-usuario/listagem-usuario.component.html
@@ -36,7 +36,8 @@
                     <label for="perfis">Perfil</label>
                 </div>
                 <div class="ui-g-12 ui-md-9">
-                    <p-dropdown [options]="perfis" name="perfil" placeholder="Selecione" [(ngModel)]="perfil"></p-dropdown>
+                    <p-dropdown [options]="perfis" name="perfil" placeholder="Selecione"
+                    [style]="{width: '30%', minWidth: '30%'}" [(ngModel)]="perfil"></p-dropdown>
                 </div>
             </div>
 
