--- a/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
+++ b/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
@@ -25,7 +25,8 @@
         <label for="tiposMidias">Tipo de Programação</label>
     </div>
     <div class="ui-g-12 ui-md-9 ui-fluid">
-        <p-dropdown [options]="tiposProgramacao" name="tipo" placeholder="Selecione" [(ngModel)]="programacao.tipoProgramacao" ></p-dropdown>
+        <p-dropdown [options]="tiposProgramacao" name="tipo" placeholder="Selecione" 
+        [style]="{width: '30%', minWidth: '30%'}" [(ngModel)]="programacao.tipoProgramacao" ></p-dropdown>
     </div>
   </div>
 
@@ -97,9 +98,9 @@
 
     <p-dialog header="Adicionar Mídia" [(visible)]="display">
 
-      <p-dataList [value]="midias" [paginator]="true" [rows]="5">
-        <p-header>
-            List de Mídias
+      <p-dataList [value]="midias" [paginator]="true" [rows]="2">
+        <p-header [style]="{'color': 'green'}">
+            Lista de Mídias
         </p-header>
         <ng-template let-mid pTemplate="item">
             <div class="ui-g ui-fluid car-item">
