projeto com adição de spinner, listagem de mídias, validação de email e campo de password formatado

--- a/desafiourbana-ui - Copia/src/app/cadastro/cadastro.component.html
+++ b/desafiourbana-ui - Copia/src/app/cadastro/cadastro.component.html
@@ -38,7 +38,7 @@
                 <label>Senha</label>
             </div>
             <div class="ui-g-12 ui-md-9 ui-fluid">
-                <input pInputText type="text" name="senha" class="campo" [(ngModel)]="usuario.senha">
+                <input pInputText type="password" pPassword name="senha" class="campo" [(ngModel)]="usuario.senha">
             </div>
         </div>
 
