--- a/desafiourbana-ui - Copia/src/app/listagem-programacao/listagem-programacao.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-programacao/listagem-programacao.component.html
@@ -46,6 +46,15 @@
         
 </form>
 
+    <ngx-spinner
+        bdColor="rgba(128, 255, 128, 0.0)"
+        size="medium"
+        color="#5cb85c"
+        type="line-scale-party"
+        fullscreen="false"
+        >
+    </ngx-spinner>  
+
 <!-- <div style="width: 99%;"> -->
 
 <p-dataTable [value]="programacoes" [paginator]="true" [rows]="3" [responsive]="true"
