--- a/desafiourbana-ui - Copia/src/app/listagem-usuario/listagem-usuario.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-usuario/listagem-usuario.component.html
@@ -54,6 +54,15 @@
         </div>            
 
     </form>
+
+    <ngx-spinner
+        bdColor="rgba(128, 255, 128, 0.0)"
+        size="medium"
+        color="#5cb85c"
+        type="line-scale-party"
+        fullscreen="false"
+        >
+    </ngx-spinner>  
    
     <p-dataTable [value]="usuarios" [paginator]="true" [rows]="3" [responsive]="true"
       emptyMessage="Nenhum usuário encontrado" #tabela>
