--- a/desafiourbana-ui - Copia/src/app/midia/midia.component.html
+++ b/desafiourbana-ui - Copia/src/app/midia/midia.component.html
@@ -52,7 +52,7 @@
             </div>
             <div fxFlex="10%" style="margin-bottom: 2%;">
                 <div style="color: green;">
-                    <p-dropdown [options]="disponibilidade" name="disponibilidadeMidia" placeholder="Selecione" [(ngModel)]="midia.disponibilidadeMidia" ></p-dropdown>
+                    <p-dropdown [options]="disponibilidade" [style]="{width: '30%', minWidth: '30%'}" name="disponibilidadeMidia" placeholder="Selecione" [(ngModel)]="midia.disponibilidadeMidia" ></p-dropdown>
                 </div>  
             </div>
             <!-- <div fxFlex="10%" style="margin-bottom: 2%;">
