--- a/desafiourbana-ui - Copia/src/app/listagem-tv/listagem-tv.component.html
+++ b/desafiourbana-ui - Copia/src/app/listagem-tv/listagem-tv.component.html
@@ -35,6 +35,15 @@
         </div>           
             
     </form>
+
+    <ngx-spinner
+        bdColor="rgba(128, 255, 128, 0.0)"
+        size="medium"
+        color="#5cb85c"
+        type="line-scale-party"
+        fullscreen="false"
+        >
+    </ngx-spinner>  
     
     <p-dataTable [value]="tvs" [paginator]="true" [rows]="3" [responsive]="true"
         emptyMessage="Nenhuma TV encontrada" #tabela>
