--- a/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
+++ b/desafiourbana-ui - Copia/src/app/programacao/programacao.component.html
@@ -75,7 +75,7 @@
     </div>
   </div>
 
-<p-dataTable [value]="prog" [paginator]="true" [rows]="3" [responsive]="true"
+<!-- <p-dataTable [value]="midiasSelecionadas" [paginator]="true" [rows]="2" [responsive]="true"
     emptyMessage="Nenhuma mídia adicionada à programação" #tabela>
         
         <p-column field="titulo" header="Nome"></p-column>
@@ -91,9 +91,32 @@
           <ng-template let-tv="rowData" pTemplate="body">
             <button pButton icon="fa-trash" class="ui-button-success" type="button" label="excluir" (click)="confirmarExclusao(tv)"></button>
           </ng-template>
-      </p-column>
-      
-</p-dataTable>    
+      </p-column>      
+</p-dataTable>     -->
+
+<div>
+  <table id="customers">
+    <thead class="thead-light">
+      <tr>
+        <th colspan="3">Midias Selecionadas</th>
+      </tr>
+    </thead>
+    <thead class="thead-light">
+      <tr>
+        <th>Titulo</th>
+        <th>Tipo</th>
+        <th>Duração</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let m of midiasSelecionadas">
+        <th>{{ m.titulo }}</th>
+        <th>{{ m.tipoMidia }}</th>
+        <th>{{ m.duracao }}</th>
+      </tr>
+    </tbody>
+  </table>
+</div>
   
 
     <p-dialog header="Adicionar Mídia" [(visible)]="display">
@@ -123,7 +146,7 @@
 
                         <div class="ui-g-2 ui-sm-6">Adicionar: </div>
                         <div class="ui-g-10 ui-sm-6">
-                          <button pButton class="ui-button-success" type="button" label="adicionar" (click)="adicionarMidia(mid)"></button>
+                          <button pButton class="ui-button-success" type="button" label="adicionar" (click)="adicionarMidia(mid)" (click)="getMidiasSelecionadas()"></button>
                         </div>
                     </div>
                 </div>
