--- a/desafiourbana-ui - Copia/src/app/midia/midia.component.html
+++ b/desafiourbana-ui - Copia/src/app/midia/midia.component.html
@@ -41,7 +41,7 @@
 
             <div fxFlex="10%" style="margin-bottom: 2%;">
                 <div style="color: green;">
-                   <p-dropdown [options]="tiposMidias" name="tipoMidia" placeholder="Selecione" [(ngModel)]="midia.tipoMidia" ></p-dropdown>
+                   <p-dropdown [options]="tiposMidias" [style]="{width: '30%', minWidth: '30%'}" name="tipoMidia" placeholder="Selecione" [(ngModel)]="midia.tipoMidia" ></p-dropdown>
                 </div>  
             </div>
 
