--- a/desafiourbana-ui - Copia/src/app/cadastro/cadastro.component.html
+++ b/desafiourbana-ui - Copia/src/app/cadastro/cadastro.component.html
@@ -20,7 +20,7 @@
                 <label>E-mail</label>
             </div>
             <div class="ui-g-12 ui-md-9 ui-fluid">
-                <input pInputText type="text" name="email" class="campo" [(ngModel)]="usuario.email">
+                <input pInputText type="email" email name="email" class="campo" [(ngModel)]="usuario.email">
             </div>
         </div>
 
